added main page

--- a/main.html
+++ b/main.html
@@ -4,12 +4,14 @@
 	<title>Ghost Team</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 	<header class="fixed-header">
         <nav class="navbar">
           <ul>
             <li><a href="#">Main</a></li>
+            <li><a href="#">Matches</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Fans</a></li>
             <li><a href="#">Contacts</a></li>
@@ -18,11 +20,19 @@
         </nav>
       </header>
 	<main>
-		<p>This is the first page of my website. Here's some placeholder text to give you an idea of what it might look like.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada ligula eu ante bibendum tristique. Suspendisse auctor arcu vel dolor blandit, non vestibulum mi facilisis. Donec non orci sed mauris suscipit pretium. Praesent pellentesque nisl quis augue bibendum laoreet. Nullam elementum turpis id velit vestibulum lobortis. Duis sollicitudin lobortis diam, eu dignissim nibh bibendum eget. Pellentesque aliquet ligula quis magna placerat bibendum. Fusce euismod, odio eu pulvinar faucibus, elit elit vehicula elit, sit amet ullamcorper sapien nunc in nunc. </p>
+    <div class = "main-img"></div>
+    <div class = "first-text">
+      GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. Its goal: to establish creative cooperation between manufacturer and athletes in the racing world.
+    </div>
+    <div class = "second-text">
+      Our first Olympic Gold Medal in Beijing in 2008 delivered proof of the performance potential of our bikes. In the 10 years following, our athletes have won countless National and International titles: German Bundesliga titles, World Cup titles as well as World Cup, European and World Championship titles.The GHOST Factory Racing Team continually evolved over course of years.
+    </div>
+		<div class = "main-info">
+      <p class="sam">em ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada ligula eu ante bibendum tristique. Suspendisse auctor arcu vel dolor blandit, non vestibulum mi facilisis. Donec non orci sed mauris suscipit pretium. Praesent pellentesque nisl quis augue bibendum laoreet. Nullam elementum turpis id velit vestibulum lobortis. Duis sollicitudin lobortis diam, eu dignissim nibh bibendum eget. Pellentesque aliquet ligula quis magna placerat bibendum. Fusce euismod, odio eu pulvinar faucibus, elit elit vehicula elit, sit amet ullamcorper sapien nunc in nunc. </p>
+    </div>
 	</main>
 	<footer>
-		<p>Copyright &copy; 2023 Ghost Team</p>
+		<p class="text-footer">Copyright &copy; 2023 Ghost Team</p>
 	</footer>
 </body>
 </html>
