--- a/main.html
+++ b/main.html
@@ -60,8 +60,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6" id ="card">
-          <div class="card">
+        <div class="col-md-6">
+          <div class="card" id ="card">
             <div class="card-body">
               <p class="card-text">GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. Its goal: to establish creative cooperation between manufacturer and athletes in the racing world..</p>
             </div>
