--- a/main.html
+++ b/main.html
@@ -16,18 +16,13 @@
 </head>
 <body>
 	<header class="fixed-header">
-    <nav class="navbar navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" style=" background-color: #e36767;">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class ="navbar">
-            <li><a href="#">Main</a></li>
+    <nav class="navbar navbar-expand-md navbar-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li><a href="#">Main</a></li>
             <div class="dropdown">
               <a href="#" class="dropdown__hover">
                 Matches
@@ -42,8 +37,7 @@
             <li><a href="#">Fans</a></li>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">Admin</a></li>
-          </ul>
-        </div>
+        </ul>
       </div>
     </nav>
       </header>
@@ -56,14 +50,14 @@
         <div class="col-md-6">
           <div class="card" id ="card">
             <div class="card-body">
-              <p class="card-text">GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. Its goal: to establish creative cooperation between manufacturer and athletes in the racing world.</p>
+              <p class="card-text">GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. </p>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card" id ="card">
             <div class="card-body">
-              <p class="card-text">GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. Its goal: to establish creative cooperation between manufacturer and athletes in the racing world..</p>
+              <p class="card-text">Our first Olympic Gold Medal in Beijing in 2008 delivered proof of the performance potential of our bikes. In the 10 years following, our athletes have won countless National and International titles: German Bundesliga titles, World Cup titles as wellas World Cup, European and World.</p>
             </div>
           </div>
         </div>
