--- a/main.html
+++ b/main.html
@@ -34,13 +34,13 @@
               </div>
             </div>
             <li><a href="#">News</a></li>
-            <li><a href="#">Fans</a></li>
+            <li><a href="fans.html">Fans</a></li>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">Admin</a></li>
         </ul>
       </div>
     </nav>
-      </header>
+  </header>
 	<main>
     <div class = "main-img">
       <img src="team.jpg" class="img-fluid">
@@ -57,7 +57,7 @@
         <div class="col-md-6">
           <div class="card" id ="card">
             <div class="card-body">
-              <p class="card-text">Our first Olympic Gold Medal in Beijing in 2008 delivered proof of the performance potential of our bikes. In the 10 years following, our athletes have won countless National and International titles: German Bundesliga titles, World Cup titles as wellas World Cup, European and World.</p>
+              <p class="card-text">Our first Olympic Gold Medal in Beijing in 2008 delivered proof of the performance potential of our bikes. In the 10 years following, our athletes have won countless National and International titles: German Bundesliga titles, World Cup titles as wellas World Cup.</p>
             </div>
           </div>
         </div>
