--- a/fans.html
+++ b/fans.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Ghost Team</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="fans.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<head>
+  <title>Ghost Team</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header class="fixed-header">
-      <nav class="navbar navbar-expand-md navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li><a href="#">Main</a></li>
-              <div class="dropdown">
-                <a href="#" class="dropdown__hover">
-                  Matches
-                </a>
-                <div class="dropdown__menu">
-                  <li><a href="#">Match 1</a></li>
-                  <li><a href="#">Match 2</a></li>
-                  <li><a href="#">Match 3</a></li>
-                </div>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <script src="fans.js"></script>
+</head>
+<body>
+  <header class="fixed-header">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li><a href="#">Main</a></li>
+            <div class="dropdown">
+              <a href="#" class="dropdown__hover">
+                Matches
+              </a>
+              <div class="dropdown__menu">
+                <li><a href="#">Match 1</a></li>
+                <li><a href="#">Match 2</a></li>
+                <li><a href="#">Match 3</a></li>
               </div>
-              <li><a href="#">News</a></li>
-              <li><a href="fans.html">Fans</a></li>
-              <li><a href="#">Contacts</a></li>
-              <li><a href="#">Admin</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <div style="margin:80px;">
-    <label for="text-field">Enter comment:</label>
-    <input type="text" id="comment">
-    <button onclick="addComment()">Add</button>
-    <div id="commentsList"></div>
-    <p id="output"></p>
+            </div>
+            <li><a href="#">News</a></li>
+            <li><a href="fans.html">Fans</a></li>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Admin</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class = "comment">
+	    <h1>Comments</h1>
+      <div id="commentsList"></div>
+	    <textarea class="textarea" aria-describedby="button-addon2" type="text" id="comment"></textarea>
+	    <div class="submit"><button onclick="addComment()" class="btn btn-danger">Add</button></div>
     </div>
-  </body>
+  </main>
   <footer>
 		<p class="text-footer">Copyright &copy; 2023 Ghost Team</p>
 	</footer>
+</body>
 </html>
