--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                 <li><a href="#">Match 3</a></li>
               </div>
             </div>
-            <li><a href="#">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="fans.html">Fans</a></li>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">Admin</a></li>
