--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <script src="fans.js"></script>
+  <script src="news.js"></script>
 </head>
 <body>
   <header class="fixed-header">
@@ -45,10 +45,12 @@
   </header>
   <main>
     <div class = "comment">
-	    <h1>Comments</h1>
-      <div id="commentsList"></div>
-	    <textarea class="textarea" aria-describedby="button-addon2" type="text" id="comment"></textarea>
-      <div class="submit"><button onclick="addComment()" class="btn btn-danger">Add</button></div>
+	    <h1>Add news</h1>
+      <input type="text" id="input1" placeholder="News title">
+      <input type="text" id="input2" placeholder="News text">
+      <input type="file" id="input3">
+      <button onclick="displayData()">Add</button>
+      <div id="output"></div>
     </div>
   </main>
   <footer>
