--- a/fans.html
+++ b/fans.html
@@ -35,7 +35,7 @@
                 <li><a href="#">Match 3</a></li>
               </div>
             </div>
-            <li><a href="#">News</a></li>
+            <li><a href="news.html">News</a></li>
             <li><a href="fans.html">Fans</a></li>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">Admin</a></li>
@@ -48,7 +48,8 @@
 	    <h1>Comments</h1>
       <div id="commentsList"></div>
 	    <textarea class="textarea" aria-describedby="button-addon2" type="text" id="comment"></textarea>
-	    <div class="submit"><button onclick="addComment()" class="btn btn-danger">Add</button></div>
+
+      <div class="submit"><button onclick="addComment()" class="btn btn-danger">Add</button></div>
     </div>
   </main>
   <footer>
