--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ghost Team</title>
+  <title>Ghost Team</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
@@ -13,9 +13,11 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <script src="news.js"></script>
 </head>
 <body>
-	<header class="fixed-header">
+  <header class="fixed-header">
     <nav class="navbar navbar-expand-md navbar-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,30 +43,17 @@
       </div>
     </nav>
   </header>
-	<main>
-    <div class = "main-img">
-      <img src="team.jpg" class="img-fluid">
+  <main>
+    <div class = "comment">
+	    <h1>Add news</h1>
+      <input type="text" id="input1" placeholder="News title">
+      <input type="text" id="input2" placeholder="News text">
+      <input type="file" id="input3">
+      <button onclick="displayData()">Add</button>
+      <div id="output"></div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card" id ="card">
-            <div class="card-body">
-              <p class="card-text">GHOST Bikes has strong ties to the sport of mountain biking and has been a competent partner for international top riders for many years. After several professional engagements in competitive racing, GHOST founded its own Factory Racing Team in 2011. </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card" id ="card">
-            <div class="card-body">
-              <p class="card-text">Our first Olympic Gold Medal in Beijing in 2008 delivered proof of the performance potential of our bikes. In the 10 years following, our athletes have won countless National and International titles: German Bundesliga titles, World Cup titles as wellas World Cup.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-	</main>
-	<footer>
+  </main>
+  <footer>
 		<p class="text-footer">Copyright &copy; 2023 Ghost Team</p>
 	</footer>
 </body>
