--- a/news.html
+++ b/news.html
@@ -66,6 +66,9 @@
         <button onclick="displayData()" class="btn btn-danger">Add</button>
       </div>
     </div>
+    <div class = "main-img">
+      <img src="team.jpg" class="img-fluid">
+    </div>
   </main>
   <footer>
     <p class="text-footer">Copyright &copy; 2023 Ghost Team</p>
