--- a/fans.html
+++ b/fans.html
@@ -50,6 +50,9 @@
 	    <textarea class="textarea" aria-describedby="button-addon2" type="text" id="comment"></textarea>
       <div class="submit"><button onclick="addComment()" class="btn btn-danger">Add</button></div>
     </div>
+    <div class = "main-img">
+      <img src="team.jpg" class="img-fluid">
+    </div>
   </main>
   <footer>
 		<p class="text-footer">Copyright &copy; 2023 Ghost Team</p>
